@@ -1,6 +1,6 @@
 Package: bartCause
-Version: 1.0-9
-Date: 2024-09-16
+Version: 1.0-10
+Date: 2025-12-08
 Title: Causal Inference using Bayesian Additive Regression Trees
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com",      comment = c(ORCID = "0000-0002-9576-3064")),
@@ -14,9 +14,10 @@ License: GPL (>= 2)
 NeedsCompilation: no
 URL: https://github.com/vdorie/bartCause
 BugReports: https://github.com/vdorie/bartCause/issues
-Packaged: 2024-09-16 19:02:34 UTC; vdorie
-Author: Vincent Dorie [aut, cre] (<https://orcid.org/0000-0002-9576-3064>),
-  Jennifer Hill [aut] (<https://orcid.org/0000-0003-4983-2206>)
+Packaged: 2025-12-08 17:47:04 UTC; vdorie
+Author: Vincent Dorie [aut, cre] (ORCID:
+    <https://orcid.org/0000-0002-9576-3064>),
+  Jennifer Hill [aut] (ORCID: <https://orcid.org/0000-0003-4983-2206>)
 Maintainer: Vincent Dorie <vdorie@gmail.com>
 Repository: CRAN
-Date/Publication: 2024-09-16 19:40:01 UTC
+Date/Publication: 2025-12-11 16:10:08 UTC
