@@ -1,21 +1,21 @@
-db665ceb8f70a27f385380601e0da6af *DESCRIPTION
+5cdc85d459734c39646cd6b6ebab8c22 *DESCRIPTION
 ce1be0fcdfcf0a0ac929179dcfe2c4c0 *NAMESPACE
 6b8fe29a371a7c50a95096517cc79e6f *R/argParse.R
 f3a9ceed106950cd2ab42ea1f67085a0 *R/bartc.R
 abab2eb2c949a4ab27c2cc15b4f69132 *R/bayesOpt.R
 c815cc0095fa36daf54840ba3d051064 *R/commonSupport.R
-ec3bc56a0472cef3a39b01721138d44d *R/generics.R
+97f0b7f4ffc710bcbd2c9a089fe2454f *R/generics.R
 c0e7f4782edc3365b3dc712af03736dc *R/hpdint.R
 aa9e6286eb83d769b363990abda12ca3 *R/multipleAssignment.R
 3c9515ca593eb3a0f7a1abbc8cbce250 *R/plot.R
-0a73e9daf30cf2573e94b79563fade73 *R/responseFit.R
+fd51ada552c148f67dc9b367bc302631 *R/responseFit.R
 ebfe8c68b911d775c7142c1d8bb5410d *R/summary.R
 00afa2f1b34ab888f166c1a785540e2b *R/tmle.R
 d24938f8fe92c705303545d6a6e93605 *R/treatmentFit.R
-c840eb3fbcb6b77184f4897e7738823f *R/utility.R
-aa5e5a2cbfaea3d9b6cdbe378ac48cee *build/partial.rdb
+a78d32fee09226ee4ab9628b881856eb *R/utility.R
+76e123f5dcc8dee07678412adc0a2a84 *build/partial.rdb
 a17f97d09fd9759ffc391a1fef255397 *inst/CITATION
-ee1c4bbd5670bd912f65488e3d03fa1b *inst/NEWS.Rd
+fd44beca66193652be415a3579f25ef4 *inst/NEWS.Rd
 593b3dbf7057a8f5d85d03b2f2e99d8e *inst/common/binaryData.R
 a2d6c389a0549ec59483e8bf0c6fcbe3 *inst/common/friedmanData.R
 367cc8805f7ff29a1ed91ec522d7a977 *inst/common/groupedData.R
@@ -28,11 +28,11 @@ e449cb1200db27ef956e8434291a5dd6 *tests/testthat.R
 8daf245250089f986914d744ccca4b57 *tests/testthat/test-01-callConstructors.R
 04991f829d2a021e69724c6e657d7a63 *tests/testthat/test-02-treatmentFit.R
 be7d0b931f14141aece9d60db95e813b *tests/testthat/test-03-responseFit.R
-729aac6917335445c2ae6ac6ab94e78f *tests/testthat/test-04-bartc.R
-ebcd7d3f9a6839c71a83d10beadc0414 *tests/testthat/test-05-generics.R
-030f1cf1ec2e53d7b279738127d81d65 *tests/testthat/test-06-regression.R
+c1e817224c839b1964f241e5e172ace8 *tests/testthat/test-04-bartc.R
+a415a5ae845f427fc447fd2e012b7a51 *tests/testthat/test-05-generics.R
+1a1627ef43713d7a93ebd0acf062bf17 *tests/testthat/test-06-regression.R
 bc19251dfaef6cf7246c43cd3472523c *tests/testthat/test-07-commonSupport.R
 85eecc7c59ae46baa24627321977b9db *tests/testthat/test-08-predict.R
 0ce5bc6143dea527cccaf9e5299443e3 *tests/testthat/test-09-binary.R
 7a2f4dfc6054b166e8fff20437a38187 *tests/testthat/test-10-rng.R
-fe4bdf143c0608e59ed0f1e175bfc9f5 *tests/testthat/test-11-stan4bart.R
+63679bc9eac8b89d4d1a78383c4ae608 *tests/testthat/test-11-stan4bart.R
